--- a/DoubleRangeSlider/en.lproj/MainStoryboard.storyboard
+++ b/DoubleRangeSlider/en.lproj/MainStoryboard.storyboard
@@ -9,15 +9,64 @@
             <objects>
                 <viewController id="2" customClass="DemoViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3">
-                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="left option:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fJX-mx-Vmr">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="-" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RcC-2U-9XN">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="right option:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dce-Jh-BZ5">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="-" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DOK-rh-EMc">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="DOK-rh-EMc" firstAttribute="baseline" secondItem="dce-Jh-BZ5" secondAttribute="baseline" type="default" id="219-4b-W4q"/>
+                            <constraint firstItem="RcC-2U-9XN" firstAttribute="top" secondItem="3" secondAttribute="top" constant="20" symbolic="YES" type="default" id="GhK-KW-CND"/>
+                            <constraint firstItem="fJX-mx-Vmr" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="IPy-R9-Fc2"/>
+                            <constraint firstItem="dce-Jh-BZ5" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="Rgf-v5-bhD"/>
+                            <constraint firstItem="fJX-mx-Vmr" firstAttribute="top" secondItem="3" secondAttribute="top" constant="20" symbolic="YES" type="default" id="TAb-uH-1hI"/>
+                            <constraint firstItem="DOK-rh-EMc" firstAttribute="leading" secondItem="dce-Jh-BZ5" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="aoP-9i-rPG"/>
+                            <constraint firstItem="dce-Jh-BZ5" firstAttribute="top" secondItem="fJX-mx-Vmr" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="q63-hv-M3z"/>
+                            <constraint firstItem="DOK-rh-EMc" firstAttribute="leading" secondItem="RcC-2U-9XN" secondAttribute="leading" type="default" id="sLq-Gr-iVc"/>
+                            <constraint firstItem="RcC-2U-9XN" firstAttribute="leading" secondItem="fJX-mx-Vmr" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="zQ8-gK-WrZ"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="leftOption" destination="RcC-2U-9XN" id="2Lk-Op-tYn"/>
+                        <outlet property="rightOption" destination="DOK-rh-EMc" id="pcR-TM-eyP"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
     </scenes>
+    <classes>
+        <class className="DemoViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/DemoViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="leftOption" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="rightOption" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
