--- a/DoubleRangeSlider/en.lproj/MainStoryboard.storyboard
+++ b/DoubleRangeSlider/en.lproj/MainStoryboard.storyboard
@@ -12,7 +12,7 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="left option:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fJX-mx-Vmr">
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="min bedrooms:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fJX-mx-Vmr">
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
@@ -22,7 +22,7 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="right option:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dce-Jh-BZ5">
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="max bedrooms:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dce-Jh-BZ5">
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
@@ -32,23 +32,55 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="min year:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M62-cn-Sw6">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="-" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Ny-GY-Rvh">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="max year:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qhk-P7-SDe">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="-" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sCV-cm-Qic">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="RcC-2U-9XN" firstAttribute="leading" secondItem="DOK-rh-EMc" secondAttribute="leading" type="default" id="0UR-nu-FMr"/>
                             <constraint firstItem="DOK-rh-EMc" firstAttribute="baseline" secondItem="dce-Jh-BZ5" secondAttribute="baseline" type="default" id="219-4b-W4q"/>
+                            <constraint firstItem="M62-cn-Sw6" firstAttribute="top" secondItem="3" secondAttribute="top" constant="252" id="2Yq-Et-fbA"/>
+                            <constraint firstItem="M62-cn-Sw6" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="7xr-V7-cIq"/>
+                            <constraint firstItem="4Ny-GY-Rvh" firstAttribute="leading" secondItem="DOK-rh-EMc" secondAttribute="leading" type="default" id="9Uz-ZA-Eva"/>
+                            <constraint firstItem="Qhk-P7-SDe" firstAttribute="top" secondItem="M62-cn-Sw6" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="D5S-Tt-keH"/>
+                            <constraint firstItem="sCV-cm-Qic" firstAttribute="leading" secondItem="4Ny-GY-Rvh" secondAttribute="leading" type="default" id="DyX-hQ-pDZ"/>
+                            <constraint firstItem="sCV-cm-Qic" firstAttribute="leading" secondItem="Qhk-P7-SDe" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="Fhm-cP-W5d"/>
                             <constraint firstItem="RcC-2U-9XN" firstAttribute="top" secondItem="3" secondAttribute="top" constant="20" symbolic="YES" type="default" id="GhK-KW-CND"/>
                             <constraint firstItem="fJX-mx-Vmr" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="IPy-R9-Fc2"/>
+                            <constraint firstItem="4Ny-GY-Rvh" firstAttribute="leading" secondItem="M62-cn-Sw6" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="PWz-fY-SIP"/>
                             <constraint firstItem="dce-Jh-BZ5" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="Rgf-v5-bhD"/>
                             <constraint firstItem="fJX-mx-Vmr" firstAttribute="top" secondItem="3" secondAttribute="top" constant="20" symbolic="YES" type="default" id="TAb-uH-1hI"/>
+                            <constraint firstAttribute="bottom" secondItem="sCV-cm-Qic" secondAttribute="bottom" constant="244" id="USm-oI-Zah"/>
                             <constraint firstItem="DOK-rh-EMc" firstAttribute="leading" secondItem="dce-Jh-BZ5" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="aoP-9i-rPG"/>
                             <constraint firstItem="dce-Jh-BZ5" firstAttribute="top" secondItem="fJX-mx-Vmr" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="q63-hv-M3z"/>
-                            <constraint firstItem="DOK-rh-EMc" firstAttribute="leading" secondItem="RcC-2U-9XN" secondAttribute="leading" type="default" id="sLq-Gr-iVc"/>
+                            <constraint firstItem="4Ny-GY-Rvh" firstAttribute="top" secondItem="3" secondAttribute="top" constant="257" id="ul4-05-wtq"/>
+                            <constraint firstItem="Qhk-P7-SDe" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="yEt-Mq-OE6"/>
                             <constraint firstItem="RcC-2U-9XN" firstAttribute="leading" secondItem="fJX-mx-Vmr" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="zQ8-gK-WrZ"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="leftOption" destination="RcC-2U-9XN" id="2Lk-Op-tYn"/>
-                        <outlet property="rightOption" destination="DOK-rh-EMc" id="pcR-TM-eyP"/>
+                        <outlet property="bedroomsLeftOption" destination="RcC-2U-9XN" id="uLk-HR-djL"/>
+                        <outlet property="bedroomsRightOption" destination="DOK-rh-EMc" id="OXD-Nv-ubz"/>
+                        <outlet property="yearLeftOption" destination="4Ny-GY-Rvh" id="xuY-wt-9NE"/>
+                        <outlet property="yearRightOption" destination="sCV-cm-Qic" id="qhu-r9-3F8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
@@ -59,8 +91,10 @@
         <class className="DemoViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/DemoViewController.h"/>
             <relationships>
-                <relationship kind="outlet" name="leftOption" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="rightOption" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="bedroomsLeftOption" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="bedroomsRightOption" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="yearLeftOptions" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="yearRightOption" candidateClass="UILabel"/>
             </relationships>
         </class>
         <class className="NSLayoutConstraint" superclassName="NSObject">
